--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "braidsbyvee-booking-site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://braidsbyvee.com",
   "dependencies": {
+    "@aws-amplify/api": "^6.3.15",
+    "@aws-amplify/storage": "^6.9.3",
+    "@aws-amplify/ui-react": "^6.11.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^6.15.3",
+    "aws-sdk": "^2.1692.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -35,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
