--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "private": true,
   "homepage": "https://braidsbyvee.com",
   "dependencies": {
-    "@aws-amplify/api": "^6.3.15",
-    "@aws-amplify/storage": "^6.9.3",
-    "@aws-amplify/ui-react": "^6.11.2",
+    "aws-amplify": "4.3.19",
+    "@aws-amplify/ui-react": "2.12.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^6.15.3",
     "aws-sdk": "^2.1692.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
